# UnnamedCryptoDashboard

./: README.md
backend/: README.md  conftest.py  pyproject.toml
backend/app/: populate.py
backend/app/datasource/: abs.py  coincap.py
backend/app/db/: init_db.py
backend/app/db/models/: crypto.py  holdings.py  price_history.py
backend/script/historical/: README.md  historical.py  models.py
backend/tests/: test_populate.py
backend/tests/.data/: assets_coincap.json
backend/tests/datasource/: test_coincap.py
backend/tests/db/: test_models.py
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package.json
frontend/src/: App.vue  main.ts
frontend/src/__mockdata__/: README.md  holdings.ts
frontend/src/components/__tests__/: NavMain.spec.ts
frontend/src/components/__tests__/__snapshots__/: NavMain.spec.ts.snap
frontend/src/components/charts/: BarWeekly.vue  LineMonthy.vue  LineYearly.vue  _common.ts
frontend/src/components/holdings/: HoldingsTable.vue  HoldingsTableRow.vue
frontend/src/components/main/: NavMain.vue
frontend/src/router/: routes.ts
frontend/src/views/: DashboardView.vue  HoldingsView.vue
